--- a/MidnightDiscovery/res/values/strings.xml
+++ b/MidnightDiscovery/res/values/strings.xml
@@ -2,14 +2,15 @@
 <resources>
 
     <string name="app_name">Midnight Discovery</string>
-    
     <string name="dialog_title">Message</string>
     <string name="dialog_accept">Accept</string>
     <string name="dialog_active">Active</string>
     <string name="dialog_cancel">Cancel</string>
-	
     <string name="action_login">Login</string>
     <string name="action_register">Register</string>
     <string name="action_go_home">Go to homepage</string>
     <string name="action_logout">Logout</string>
+    <string name="action_change_password">Change password</string>
+    <string name="action_edit">Edit</string>
+
 </resources>
